# first_fast_api

./: LICENSE  pyproject.toml
first_fast_api/: app.py
tests/: conftest.py  test_client.py  test_db.py
